# riscvga

./: .gitignore  LICENSE  STATUS.txt  meson.build
asm/: Makefile  build.sh  meson.build  test_br.S  test_icache.riscv  test_imm.S  test_jal.S  test_regops.S
asm/dis/: add.txt  addi.txt  and.txt  andi.txt  auipc.txt  beq.txt  bge.txt  bgeu.txt  blt.txt  bltu.txt  bne.txt  div.txt  divu.txt  j.txt  jal.txt  jalr.txt  lb.txt  lbu.txt  lh.txt  lhu.txt  lui.txt  lw.txt  mul.txt  mulh.txt  mulhsu.txt  mulhu.txt  or.txt  ori.txt  rem.txt  remu.txt  rvga_forward.txt  rvga_icache.txt  rvga_jal.txt  rvga_ldst.txt  rvga_regops.txt  sb.txt  sh.txt  simple.txt  sll.txt  slli.txt  (+10 more)
asm/dump/: add.dump  addi.dump  and.dump  andi.dump  auipc.dump  beq.dump  bge.dump  bgeu.dump  blt.dump  bltu.dump  bne.dump  fence_i.dump  jal.dump  jalr.dump  lb.dump  lbu.dump  lh.dump  lhu.dump  lui.dump  lw.dump  or.dump  ori.dump  rvga_br.dump  rvga_forward.dump  rvga_imm.dump  sb.dump  sh.dump  simple.dump  sll.dump  slli.dump  slt.dump  slti.dump  sltiu.dump  sltu.dump  sra.dump  srai.dump  srl.dump  srli.dump  sub.dump  sw.dump  (+2 more)
asm/src/: README  rvga_br.S  rvga_forward.S  rvga_icache.S  test_forward.S  test_imm.S  test_jal.S  test_ldst.S  test_regops.S
asm/vh/: add.vh  addi.vh  and.vh  andi.vh  auipc.vh  beq.vh  bge.vh  bgeu.vh  blt.vh  bltu.vh  bne.vh  div.vh  divu.vh  fence_i.vh  j.vh  jal.vh  jalr.vh  lb.vh  lbu.vh  lh.vh  lhu.vh  lui.vh  lw.vh  mul.vh  mulh.vh  mulhsu.vh  mulhu.vh  or.vh  ori.vh  rem.vh  remu.vh  rvga_br.vh  rvga_forward.vh  rvga_icache.vh  rvga_imm.vh  rvga_jal.vh  rvga_ldst.vh  rvga_regops.vh  sb.vh  sh.vh  (+22 more)
sch/: README  dff.dig  fetch_stage.dig
scripts/: nopify.py
verilog/: Makefile  alu.sv  alu.v  array.sv  blu.sv  br_calc.v  dcache.sv  debug_defines.sv  debug_defines.vh  decode.v  decode_ctl.sv  decode_dp.sv  decode_stage.sv  dff.sv  execute.v  execute_ctl.sv  execute_dp.sv  execute_stage.sv  forwarding.sv  hazard.sv  icache.sv  icache_control.sv  icache_datapath.sv  ifetch.v  ifetch_ctl.sv  ifetch_dp.sv  ifetch_stage.sv  ifetch_stage_tb.sv  imm_construct.sv  inst_decoder.sv  l1cache.sv  l1cache_control.sv  l1cache_datapath.sv  l1cache_tb.sv  memory.v  memory_ctl.sv  memory_dp.sv  memory_slicer.sv  memory_stage.sv  mux2.sv  (+35 more)
verilog/rvga/: rvga.xpr
verilog/rvga/rvga.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
verilog/rvga/rvga.ip_user_files/mem_init_files/: test_memory.mem
verilog/rvga/rvga.runs/.jobs/: vrs_config_11.xml  vrs_config_88.xml
verilog/rvga/rvga.runs/synth_1/: .vivado.begin.rst  gen_run.xml  htr.txt  project.wdf  rundef.js  runme.sh  rvga_top.dcp  rvga_top.tcl  rvga_top.vds  rvga_top_utilization_synth.pb  rvga_top_utilization_synth.rpt  vivado.jou  vivado.pb
verilog/rvga/rvga.sim/: rvga_tb_behav.wcfg
verilog/rvga/rvga.sim/sim_1/behav/xsim/: compile.sh  elaborate.sh  rvga_tb_behav.wdb  rvga_tb_vlog.prj  simulate.sh  webtalk.jou  webtalk_19677.backup.jou  webtalk_19881.backup.jou  webtalk_22841.backup.jou  webtalk_25450.backup.jou  webtalk_25901.backup.jou  webtalk_7518.backup.jou  webtalk_7661.backup.jou  xelab.pb  xvlog.pb
verilog/rvga/rvga.sim/sim_1/behav/xsim/xsim.dir/rvga_tb_behav/: Compile_Options.txt  xsim.dbg  xsim.mem  xsim.reloc  xsim.rlx  xsim.rtti  xsim.svtype  xsim.xdbg  xsimSettings.ini  xsimk
verilog/rvga/rvga.sim/sim_1/behav/xsim/xsim.dir/xil_defaultlib/: $unit__home_parallels_@desktop_riscv_riscvga_verilog_mux4_sv.sdb  $unit__home_parallels_@desktop_riscv_riscvga_verilog_rvga_sv.sdb  array.sdb  dcache.sdb  decode_stage.sdb  execute_stage.sdb  glbl.sdb  icache.sdb  icache_control.sdb  icache_datapath.sdb  ifetch_stage.sdb  memory_stage.sdb  mux2.sdb  mux4.sdb  nmru.sdb  rfetch_stage.sdb  rvga.sdb  rvga_tb.sdb  rvga_top.sdb  test_ddr.sdb  writeback_stage.sdb  xil_defaultlib.rlx
verilog/rvga/rvga.sim/sim_1/behav/xsim/xsim.dir/xilinx_vip/: $unit__home_parallels_@xilinx_@vivado_2018_1_data_xilinx_vip_hdl_axi4stream_vip_axi4streampc_sv.sdb  axi4stream_vip_axi4streampc.sdb  axi4stream_vip_if.sdb  axi4stream_vip_pkg.sdb  axi_vip_axi4pc.sdb  axi_vip_if.sdb  axi_vip_pkg.sdb  clk_vip_if.sdb  rst_vip_if.sdb  xil_common_vip_pkg.sdb  xilinx_vip.rlx
verilog/rvga/rvga.sim/sim_2/behav/xsim/: compile.sh  elaborate.sh  l1cache_tb_behav.wdb  l1cache_tb_vlog.prj  simulate.sh  webtalk.jou  webtalk_22482.backup.jou  webtalk_4123.backup.jou  webtalk_4414.backup.jou  xelab.pb  xvlog.pb
verilog/rvga/rvga.sim/sim_2/behav/xsim/xsim.dir/l1cache_tb_behav/: Compile_Options.txt  xsim.dbg  xsim.mem  xsim.reloc  xsim.rlx  xsim.rtti  xsim.svtype  xsim.xdbg  xsimk
verilog/rvga/rvga.sim/sim_2/behav/xsim/xsim.dir/xil_defaultlib/: $unit__home_parallels_@desktop_riscv_riscvga_verilog_mux4_sv.sdb  array.sdb  decode_stage.sdb  execute_stage.sdb  glbl.sdb  ifetch_stage.sdb  l1cache.sdb  l1cache_control.sdb  l1cache_datapath.sdb  l1cache_tb.sdb  memory_stage.sdb  mux2.sdb  mux4.sdb  nmru.sdb  rfetch_stage.sdb  rvga_top.sdb  test_ddr.sdb  writeback_stage.sdb  xil_defaultlib.rlx
verilog/rvga/rvga.sim/sim_2/behav/xsim/xsim.dir/xilinx_vip/: $unit__home_parallels_@xilinx_@vivado_2018_1_data_xilinx_vip_hdl_axi4stream_vip_axi4streampc_sv.sdb  axi4stream_vip_axi4streampc.sdb  axi4stream_vip_if.sdb  axi4stream_vip_pkg.sdb  axi_vip_axi4pc.sdb  axi_vip_if.sdb  axi_vip_pkg.sdb  clk_vip_if.sdb  rst_vip_if.sdb  xil_common_vip_pkg.sdb
verilog/rvga/rvga.srcs/constrs_1/new/: zedboard_master.xdc
verilog/rvga/rvga.srcs/sources_1/new/: mux2.sv  mux4.sv  rvga_tb.sv  test_ddr.sv
verilog/src/: adder.sv  array.sv  decode_stage.sv  dff.sv  execute_stage.sv  exmem_latch.sv  forwarding.sv  hazard.sv  idrf_latch.sv  ifetch_stage.sv  ifid_latch.sv  inst_decoder.sv  memory_slicer.sv  memory_stage.sv  memwb_latch.sv  mux.sv  regfile.sv  rfetch_stage.sv  rfex_latch.sv  rvga_alu.sv  rvga_top.sv  rvga_types.sv  writeback_stage.sv
verilog/test/: adder_tb.sv  array_tb.sv  dff_tb.sv  ifetch_stage_tb.sv  rvga_nonsynth_commit_monitor.sv  rvga_nonsynth_rvtest_monitor.sv  rvga_tb.sv  test_ddr.sv  test_memory.mem
(+8 files in other folders)
